--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Welcome to myTunes</title>
 </head>
 <body>
@@ -52,7 +52,7 @@
             <p class="lead">Stream over 45 million songs, ad-free. Or download albums and tracks to listen to offline. All the music in your personal myTunes library — no matter where it came from — lives right alongside the Orange Music catalog. Start your free three-month trial with no commitment, and cancel anytime.</p>
             <a href="" class="btn btn-primary mb">Start Your Trial Now</a>
             <p class="text-light">Orange Music is available in myTunes, and for iOS and Android devices.</p>
-            <img src="/img/mockup1.png" alt="">
+            <img src="./mockup1.png" alt="">
         </div>
     </section>
 
@@ -64,7 +64,7 @@
             </h2>
             <p class="lead">With over 100,000 movies and TV shows to choose from, there’s always something great to watch on myTunes and if you watch on Orange TV 4K, you’ll be able to enjoy a tremendous selection of your favorite content in 4K HDR. So get ready to enjoy episodes of your favorite TV shows or hit movies you’ve been waiting to see — anytime, anywhere. Just tap to play, or even download if you’re going somewhere you won’t have Wi-Fi.</p>
             <a href="" class="btn btn-secondary">Read More</a>
-            <img src="/img/mockup2.png" alt="">
+            <img src="./mockup2.png" alt="">
         </div>
     </section>
 
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="gift-cards">
                 <div>
-                    <img src="/img/cards.png" alt="">
+                    <img src="./cards.png" alt="">
                 </div>
                 <div>
                     <h2>Gift Cards</h2>
